--- a/scss/layout.scss
+++ b/scss/layout.scss
@@ -1,2 +1,21 @@
 @import "vars";
 @import "mixins";
+
+header {
+  color: #fff;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 120px;
+  display: flex;
+  align-items: center;
+  z-index: 999;
+  transition: background 0.4s;
+  .wrap {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    position: relative;
+  }
+}
